# Space_station

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg
infra/: Dockerfile  data.json  docker-compose.yml
infra/last/: .env  docker-compose.yml  nginx.conf
station/: .coverage  db.sqlite3  schema.yml
station/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
station/api/migrations/: 0001_initial.py  0002_alter_station_date_broken.py  0002_auto_20221122_1305.py  0002_auto_20221127_1208.py  0003_alter_station_date_broken.py  0003_auto_20221127_1212.py  0004_alter_station_date_broken.py  0004_auto_20221127_1227.py  0005_alter_station_date_broken.py  0005_auto_20221128_1207.py
station/htmlcov/: d_10fae538ba4e8521___init___py.html  d_10fae538ba4e8521_admin_py.html  d_10fae538ba4e8521_apps_py.html  d_10fae538ba4e8521_models_py.html  d_10fae538ba4e8521_serializers_py.html  d_10fae538ba4e8521_tests_py.html  d_10fae538ba4e8521_urls_py.html  d_10fae538ba4e8521_views_py.html  d_5b2b9d624b0c4884_0001_initial_py.html  d_5b2b9d624b0c4884_0002_auto_20221127_1208_py.html  d_5b2b9d624b0c4884_0003_auto_20221127_1212_py.html  d_5b2b9d624b0c4884_0004_auto_20221127_1227_py.html  d_5b2b9d624b0c4884_0005_auto_20221128_1207_py.html  d_5b2b9d624b0c4884___init___py.html  index.html  status.json
station/static/: schema.yml
station/station/: .env  asgi.py  settings.py  urls.py  wsgi.py
station/templates/: redoc.html
